// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoSuggestionInputSchema should be invalid for all empty 1`] = `
Object {
  "filename": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "string",
    },
  },
  "resolution": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "array",
    },
  },
}
`;

exports[`PhotoSuggestionInputSchema should be invalid for no filename 1`] = `
Object {
  "filename": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "string",
    },
  },
  "resolution": "yup:mixed.required",
}
`;

exports[`PhotoSuggestionInputSchema should be invalid for no resolution 1`] = `
Object {
  "filename": "yup:mixed.required",
  "resolution": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "array",
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for all empty 1`] = `
Object {
  "description": "yup:mixed.required",
  "filename": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for bad resolution 1`] = `
Object {
  "resolution": Object {
    "key": "yup:array.max",
    "options": Object {
      "max": 2,
      "path": "resolution",
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for bad uuid 1`] = `
Object {
  "section": Object {
    "id": Object {
      "key": "yup:string.uuid",
      "options": Object {
        "path": "section.id",
      },
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`SuggestionInputSchema should be invalid for filename without resolution 1`] = `
Object {
  "filename": "yup:mixed.required",
  "resolution": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for no description and no media 1`] = `
Object {
  "description": "yup:mixed.required",
  "filename": "yup:mixed.required",
}
`;

exports[`SuggestionInputSchema should be invalid for resolution without filename 1`] = `
Object {
  "resolution": "yup:mixed.required",
}
`;
